--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,20 @@ body {
 	text-align: center;
 }
 
+
 div {
 	border: 5px solid black;
 	padding: 30px;
 	margin: 10px;
 	background-color: #D0D2C4;
 	
+}
+
+.header {
+	height: 300px;
+	background-image: url(../images/wallstreet.jpg);
+	font-size: 70px;
+	color: white;
 }
 
 .container {
@@ -32,20 +40,13 @@ div {
 }
 
 #todoForm {
-	float: left;
-	height: 200;
-	width: 50%;
-	margin: 20px;
-
-
-	
+	width: 45%;	
+	display: inline-block;
+	float:left;
 }
 
 #todoList{
-	float: left;
-	height: 200;
-	width: 50%;
-	margin:20px;
-
-	
+	float: right;
+	width: 45%;
+	display: inline-block;
 }
