--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,14 +35,21 @@ div {
 
 #mainContent {
 	padding: 50px;
-	height: 300px;
+	height: 500px;
 
+}
+
+#addTravelInfo {
+	text-align: left;
+	width: 50%;	
+	display: inline-block;
+	float: left;
 }
 
 #todoForm {
 	width: 45%;	
 	display: inline-block;
-	float:left;
+	float:right;
 }
 
 #todoList{
