--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ div {
 .header {
 	height: 300px;
 	background-image: url(../images/wallstreet.jpg);
+	background-attachment: fixed;
 	font-size: 70px;
 	color: white;
 }
