--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
 
 div {
 	border: 5px solid black;
-	padding: 30px;
+	padding: 20px;
 	margin: 10px;
 	background-color: #D0D2C4;
 	
@@ -34,10 +34,15 @@ div {
 	background-color: white;
 }
 
-.weather {
+#weather {
 	position: fixed;
 	top: 5px;
 	right: 10px;
+	z-index: 100;
+	height: 190px !important;
+	width: 290px !important;
+	opacity: 0.8;
+
 }
 
 .newsBox {
