--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,13 @@ div {
 	text-shadow: 0 0 22px black, 0 0 22px black; 
 }
 
+.ui-menu .ui-menu-item a,.ui-menu .ui-menu-item a.ui-state-hover, .ui-menu .ui-menu-item a.ui-state-active {
+	font-weight: normal;
+	margin: -1px;
+	text-align:left;
+	font-size:14px;
+	}
+
 .container {
 	background-color: white;
 }
@@ -45,7 +52,7 @@ div {
 
 }
 
-#removeStyling{
+#travelCountry{
 	background-color: none;
 	border-style: none;
 
