--- a/assets/css/lp.css
+++ b/assets/css/lp.css
@@ -1,48 +1,253 @@
+@-webkit-keyframes imgFadeInOut {
+ 0% {
+   opacity:1;
+ }
+ 8.33% {
+   opacity:1;
+ }
+ 10% {
+   opacity:1;
+ }
+ 20% {
+   opacity:0;
+ }
+ 30% {
+   opacity:0;
+ }
+ 50% {
+   opacity:0;
+ }
+ 70% {
+   opacity:0;
+ }
+ 80% {
+   opacity:0;
+ }
+ 90% {
+   opacity:1;
+ }
+ 98.33% {
+   opacity:1;
+ }
+ 100% {
+   opacity:1;
+ }
+}
 
-  @keyframes imgFadeInOut {
+
+
+@-moz-keyframes imgFadeInOut {
   0% {
-  opacity:1;
-}
-45% {
-opacity:1;
-}
-55% {
-opacity:0;
-}
-100% {
-opacity:0;
-}
+   opacity:1;
+ }
+ 8.33% {
+   opacity:1;
+ }
+ 10% {
+   opacity:1;
+ }
+ 20% {
+   opacity:0;
+ }
+ 30% {
+   opacity:0;
+ }
+ 50% {
+   opacity:0;
+ }
+ 70% {
+   opacity:0;
+ }
+ 80% {
+   opacity:0;
+ }
+ 90% {
+   opacity:1;
+ }
+ 98.33% {
+   opacity:1;
+ }
+ 100% {
+   opacity:1;
+ }
 }
 
-*{
-  font-family: 'Playfair Display', serif;
+@-o-keyframes imgFadeInOut {
+ 0% {
+   opacity:1;
+ }
+ 8.33% {
+   opacity:1;
+ }
+ 10% {
+   opacity:1;
+ }
+ 20% {
+   opacity:0;
+ }
+ 30% {
+   opacity:0;
+ }
+ 50% {
+   opacity:0;
+ }
+ 70% {
+   opacity:0;
+ }
+ 80% {
+   opacity:0;
+ }
+ 90% {
+   opacity:1;
+ }
+ 98.33% {
+   opacity:1;
+ }
+ 100% {
+   opacity:1;
+ }
 }
+
+@keyframes imgFadeInOut {
+ 0% {
+   opacity:1;
+ }
+ 8.33% {
+   opacity:1;
+ }
+ 10% {
+   opacity:1;
+ }
+ 20% {
+   opacity:0;
+ }
+ 30% {
+   opacity:0;
+ }
+ 50% {
+   opacity:0;
+ }
+ 70% {
+   opacity:0;
+ }
+ 80% {
+   opacity:0;
+ }
+ 90% {
+   opacity:1;
+ }
+ 98.33% {
+   opacity:1;
+ }
+ 100% {
+   opacity:1;
+ }
+}
+
 
 #fadeImages {
   position:relative;
   margin:0;
   padding:0;
 }
-
 #fadeImages img {
   position:absolute;
-   width:100%;
+  width:100%;
   height: 100%;
   left:0;
-  -webkit-transition: opacity 1s ease-in-out;
-  -moz-transition: opacity 1s ease-in-out;
-  -o-transition: opacity 1s ease-in-out;
-  transition: opacity 1s ease-in-out;
+}
+
+#fadeImages img {
+  -webkit-animation-name: imgFadeInOut;
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-duration: 60s;
+
+  -moz-animation-name: imgFadeInOut;
+  -moz-animation-timing-function: ease-in-out;
+  -moz-animation-iteration-count: infinite;
+  -moz-animation-duration: 60s;
+
+  -o-animation-name: imgFadeInOut;
+  -o-animation-timing-function: ease-in-out;
+  -o-animation-iteration-count: infinite;
+  -o-animation-duration: 60s;
+
+  animation-name: imgFadeInOut;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-duration: 60s;
+}
+#fadeImages img:nth-of-type(1) {
+  -webkit-animation-delay: 54s;
+  -moz-animation-delay: 54s;
+  -o-animation-delay: 54s;
+  animation-delay: 54s;
+}
+#fadeImages img:nth-of-type(2) {
+  -webkit-animation-delay: 48s;
+  -moz-animation-delay: 48s;
+  -o-animation-delay: 48s;
+  animation-delay: 48s;
+}
+#fadeImages img:nth-of-type(3) {
+  -webkit-animation-delay: 42s;
+  -moz-animation-delay: 42s;
+  -o-animation-delay: 42s;
+  animation-delay: 42s;
+}
+#fadeImages img:nth-of-type(4) {
+  -webkit-animation-delay: 36s;
+  -moz-animation-delay: 36s;
+  -o-animation-delay: 36s;
+  animation-delay: 36s;
 }
 
 
-#fadeImages img.top {
-animation-name: imgFadeInOut;
-animation-timing-function: ease-in-out;
-animation-iteration-count: infinite;
-animation-duration: 5s;
-animation-direction: alternate;
+#fadeImages img:nth-of-type(5) {
+  -webkit-animation-delay: 30s;
+  -moz-animation-delay: 30s;
+  -o-animation-delay: 30s;
+  animation-delay: 30s;
 }
+#fadeImages img:nth-of-type(6) {
+  -webkit-animation-delay: 24s;
+  -moz-animation-delay: 24s;
+  -o-animation-delay: 24s;
+  animation-delay: 24s;
+}
+#fadeImages img:nth-of-type(7) {
+  -webkit-animation-delay: 18s;
+  -moz-animation-delay: 18s;
+  -o-animation-delay: 18s;
+  animation-delay: 18s;
+}
+#fadeImages img:nth-of-type(8) {
+  -webkit-animation-delay: 12;
+  -moz-animation-delay: 12;
+  -o-animation-delay: 12;
+  animation-delay: 12;
+}
+
+#fadeImages img:nth-of-type(9) {
+  -webkit-animation-delay: 10s;
+  -moz-animation-delay: 10s;
+  -o-animation-delay: 10s;
+  animation-delay: 10s;
+}
+#fadeImages img:nth-of-type(10) {
+  -webkit-animation-delay: 0;
+  -moz-animation-delay: 0;
+  -o-animation-delay: 0;
+  animation-delay: 0;
+}
+
+
+
+*{
+  font-family: 'Playfair Display', serif;
+}
+
 
 
 .navbar{
