--- a/assets/css/styleTwo.css
+++ b/assets/css/styleTwo.css
@@ -6,14 +6,13 @@ body {
 
 /*taking away general "div" styling for more personalization per each div - an*/
 .parallaxContainerTop, #mainContent, #miscContainer, #newsContainer {
-	border: 5px solid #9E8871;
+	border: 5px solid #black;
 	padding: 20px;
 	margin: 10px;
-	/*background: transparent;*/
 }
 
 .parallax-container {
-	height: 600px;
+	height: auto;
 }
 
 .parallax img {
@@ -30,7 +29,12 @@ body {
 	font-size: 70px;
 	color: black;
 	text-align: center;
-	/*text-shadow: 0 0 22px black, 0 0 22px black; */
+	/*text-shadow: 0 0 22px white, 0 0 22px white; */
+	/*font-family: 'Gravitas One', cursive;*/
+}
+
+#headerTitle h1 {
+	font-size: 70px;
 }
 
 
@@ -41,6 +45,8 @@ body {
 	text-align: center;
 	-webkit-text-fill-color: #FFF;
 	text-shadow: 0 0 22px black, 0 0 22px black; 
+
+	
 }
 
 .ui-menu .ui-menu-item a,.ui-menu .ui-menu-item a.ui-state-hover, .ui-menu .ui-menu-item a.ui-state-active {
@@ -50,22 +56,19 @@ body {
 	font-size:14px;
 	}
 
-.container {
-	background-color: white;
-}
 
 .hide{
 	display: none;
 }
 
 #weather {
-	position: fixed;
+	position: absolute;
 	top: 5px;
 	right: 10px;
 	z-index: 100;
 	height: 190px !important;
 	width: 290px !important;
-	opacity: 0.8;
+	opacity: 1.0;
 
 }
 
@@ -101,7 +104,6 @@ body {
     cursor: pointer;
     background-color: #008CBA;
 }
-
 
 #addTravelInfo {
 	text-align: left;
@@ -140,4 +142,8 @@ body {
 .travelImage img {
 	max-width: 1700px;
 	max-height: 1400px;
+}
+
+.travelPlans{
+	height: 500px;
 }
