--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,34 +1,53 @@
+
 body {
-	background-color: #FCFFF0;
+	/*background-color: #FCFFF0;*/
 	text-align: center;
+	font-family: 'Playfair Display', serif;
 }
 
-
-div {
-	border: 5px solid black;
-	padding: 5px;
-	margin: 5px;
-	background-color: #D0D2C4;
-	
+/*taking away general "div" styling for more personalization per each div - an*/
+.parallaxContainerTop, #mainContent, #miscContainer, #newsContainer {
+	border: 5px solid #black;
+	padding: 20px;
+	margin: 10px;
 }
 
-.header {
-	height: 300px;
-	background-image: url(../images/wallstreet.jpg);
-	background-attachment: fixed;
+.parallax-container {
+	height: auto;
+}
+
+.parallax img {
+	opacity: 0.3;
+}
+
+#parallaxImageOne {
+	max-height: 1400px;
+	max-width: 1600px;
+}
+
+#headerTitle {
+	margin-top: 100px;
 	font-size: 70px;
-	color: white;
+	color: black;
+	text-align: center;
+	/*text-shadow: 0 0 22px white, 0 0 22px white; */
+	/*font-family: 'Gravitas One', cursive;*/
 }
+
+#headerTitle h1 {
+	font-size: 70px;
+}
+
 
 #display{
-
 	background-color: none;
 	border-style: none;
-
 	font-size: 30px;
 	text-align: center;
 	-webkit-text-fill-color: #FFF;
 	text-shadow: 0 0 22px black, 0 0 22px black; 
+
+	
 }
 
 .ui-menu .ui-menu-item a,.ui-menu .ui-menu-item a.ui-state-hover, .ui-menu .ui-menu-item a.ui-state-active {
@@ -38,23 +57,19 @@ div {
 	font-size:14px;
 	}
 
-.container {
-	background-color: white;
-}
-
 
 .hide{
 	display: none;
 }
 
 #weather {
-	position: fixed;
+	position: absolute;
 	top: 5px;
 	right: 10px;
 	z-index: 100;
 	height: 190px !important;
 	width: 290px !important;
-	opacity: 0.8;
+	opacity: 1.0;
 
 }
 
@@ -63,7 +78,6 @@ div {
 	border-style: none;
 
 }
-
 
 #travelSubmit {
     border: none;
@@ -92,21 +106,6 @@ div {
     background-color: #008CBA;
 }
 
-
-
-.newsBox {
-	height: 500px;
-	width: 100%;
-    overflow: scroll;
-
-}
-
-#mainContent {
-	padding: 50px;
-	height: 500px;
-
-}
-
 #addTravelInfo {
 	text-align: left;
 	width: 50%;	
@@ -114,14 +113,38 @@ div {
 	float: left;
 }
 
-#todoForm {
-	width: 45%;	
+.newsBox .article {
+	text-align: center;
+	width: 30%;
+	height: auto;
 	display: inline-block;
-	float:right;
 }
 
-#todoList{
-	float: right;
-	width: 45%;
-	display: inline-block;
+.newsBox {
+	height: 500px;
+	width: 100%;
+    overflow: auto;
+ 
+}
+
+#todoItemBox {
+	background-color: red;
+	border: 3px solid  #660000;
+	padding: 10px;
+	width: 30%;
+	background: white;
+	margin-left: 450px;
+}
+
+#todoForm, #todoList {
+	text-align: center;
+}
+
+.travelImage img {
+	max-width: 1700px;
+	max-height: 1400px;
+}
+
+.travelPlans{
+	height: 500px;
 }
