--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,33 @@
-
 body {
 	/*background-color: #FCFFF0;*/
 	text-align: center;
 	font-family: 'Playfair Display', serif;
 }
 
-/*taking away general "div" styling for more personalization per each div - an*/
+/*---------------nav bar--------------*/
+
+nav .nav-wrapper {
+	background: white;
+	border-bottom: 5px solid black;
+	color: #660000;
+	height: 90px;
+}
+
+.nav-wrapper .brand-logo{
+	color: #660000;
+	font-size: 40px;
+	margin-top: 10px;
+}
+
+.changeLink {
+	color: #660000;
+	margin-right: 20px;
+	font-size: 20px;
+	margin-top: 12px;
+}
+
+/*--------------parallax main display-------------------------*/
+
 .parallaxContainerTop, #mainContent, #miscContainer, #newsContainer {
 	border: 5px solid #black;
 	padding: 20px;
@@ -17,7 +39,9 @@ body {
 }
 
 .parallax img {
-	opacity: 0.3;
+	background: black;
+	opacity: 0.5;
+	
 }
 
 #parallaxImageOne {
@@ -26,16 +50,17 @@ body {
 }
 
 #headerTitle {
-	margin-top: 100px;
-	font-size: 70px;
+	font-size: 100px;
 	color: black;
 	text-align: center;
-	/*text-shadow: 0 0 22px white, 0 0 22px white; */
-	/*font-family: 'Gravitas One', cursive;*/
+
+	color: #660000;
+    text-shadow: #000 0px 0px 1px;
+    -webkit-font-smoothing: antialiased;
 }
 
 #headerTitle h1 {
-	font-size: 70px;
+	font-size: 80px;
 }
 
 
@@ -45,9 +70,7 @@ body {
 	font-size: 30px;
 	text-align: center;
 	-webkit-text-fill-color: #FFF;
-	text-shadow: 0 0 22px black, 0 0 22px black; 
-
-	
+	text-shadow: 0 0 22px black, 0 0 22px black; 	
 }
 
 .ui-menu .ui-menu-item a,.ui-menu .ui-menu-item a.ui-state-hover, .ui-menu .ui-menu-item a.ui-state-active {
@@ -62,16 +85,31 @@ body {
 	display: none;
 }
 
+/*-----------------------weather display-------------------*/
+
 #weather {
-	position: absolute;
+/*	position: absolute;
 	top: 5px;
-	right: 10px;
-	z-index: 100;
-	height: 190px !important;
-	width: 290px !important;
-	opacity: 1.0;
+	left: 10px;
+	z-index: 100;*/
+	/*height: 190px !important;
+	width: 290px !important;*/
+
+	/*----adding changes to the weather display - an ---------------*/
+	/*line-height: 130%;*/
+}
+
+.weatherIcon{
+	margin-top: -10px;
 
 }
+
+.weatherInfo {
+	color:white;
+	font-weight: bold;
+}
+
+
 
 #travelCountry{
 	background-color: none;
@@ -116,14 +154,13 @@ body {
 .newsBox .article {
 	text-align: center;
 	width: 30%;
-	height: auto;
+	/*height: auto;*/
 	display: inline-block;
 }
 
 .newsBox {
 	height: 500px;
 	width: 100%;
-    overflow: auto;
  
 }
 
@@ -147,4 +184,25 @@ body {
 
 .travelPlans{
 	height: 500px;
+	overflow: all;
+}
+
+.flightNotes label, .lodgingNotes label, .localTransportation label{
+	color: white;
+	color: white;
+    text-shadow: #000 0px 0px 1px;
+    -webkit-font-smoothing: antialiased;
+	font-size: 25px;
+}
+
+.input-field label.active {
+	font-size: medium !important;
+}
+
+textarea.materialize-textarea {
+	background: white;
+	color: black !important;
+	padding-top: 5px !important;
+	padding-bottom: 5px !important;
+	padding-left: 10px !important;
 }
