--- a/assets/css/styleTwo.css
+++ b/assets/css/styleTwo.css
@@ -6,35 +6,49 @@ body {
 
 /*---------------nav bar--------------*/
 
-nav .nav-wrapper {
-	background: #660000;
-	/*border-bottom: 5px solid black;*/
-	color: #660000;
+#navBarTop{
+	position: fixed;
+	width: 100%;
 	height: 70px;
-
+	z-index: 98;
 }
 
-.nav-wrapper .brand-logo{
-	color: #660000;
-	font-size: 40px;
-	margin-top: 10px;
-	-webkit-text-fill-color: #FFF;
-	text-shadow: 0 0 22px black, 0 0 22px black; 
+.navBar {
+	background-image: none;
+	background-color: black !important;
+	opacity: 0.8;
+	color: white;
+	font-weight: bold;
+	height: 70px;
+}
 
+
+.headerTitle{
+	color: white;
+	font-size: 40px;
 	font-family: 'Playfair Display SC', serif;
+
+	z-index: 99;
+	/*position: fixed;*/
+	/*top: 0;*/
+	background: transparent;
+	font-weight: normal;
 }
 
 .logOut {
-	color: #660000;
+	color: white !important;
 	margin-right: 20px;
 	font-size: 20px;
-	margin-top: 31px;
+	margin-top: -23px;
 
-	-webkit-text-fill-color: #FFF;
-	text-shadow: 0 0 22px black, 0 0 22px black;
+	z-index: 99;
+	position: fixed;
+	right: 0;
+	background: transparent;
+	font-weight: normal;
 }
 
-/*--------------- main display-------------------------*/
+/*--------------- main/top display-------------------------*/
 
 .parallaxContainerTop, #mainContent, #miscContainer, #newsContainer {
 	border: 5px solid #black;
@@ -61,30 +75,34 @@ nav .nav-wrapper {
 	font-size: 100px;
 	color: black;
 	text-align: center;
-
-/*	color: #660000;
-    text-shadow: #000 0px 0px 1px;
-    -webkit-font-smoothing: antialiased;*/
 }
 
-#headerTitle h1 {
-	font-size: 80px;
-}
 
 #headerTitle h4 {
-	font-size: 30px;
-	margin-top: 40px;
-}
-
-
-#display{
+	margin-top: 120px;
 	background-color: none;
 	border-style: none;
 	font-size: 30px;
 	text-align: center;
 	-webkit-text-fill-color: #FFF;
-	text-shadow: 0 0 22px black, 0 0 22px black; 	
+	text-shadow: 0 0 22px black, 0 0 22px black; 
 }
+
+/*---------------countdown display----------*/
+
+.countdownDisplay{
+	margin-top: 50px;
+}
+
+#display{
+	background-color: none;
+	border-style: none;
+	font-size: 25px;
+	text-align: center;
+	-webkit-text-fill-color: #FFF;
+	text-shadow: 0 0 22px black, 0 0 22px black; 
+}
+
 
 .ui-menu .ui-menu-item a,.ui-menu .ui-menu-item a.ui-state-hover, .ui-menu .ui-menu-item a.ui-state-active {
 	font-weight: normal;
@@ -110,6 +128,9 @@ nav .nav-wrapper {
 
 	/*----adding changes to the weather display - an ---------------*/
 	/*line-height: 130%;*/
+	z-index: 99;
+	position: fixed;
+	background: transparent;
 }
 
 .weatherIcon{
@@ -117,8 +138,16 @@ nav .nav-wrapper {
 
 }
 
+.miniWeatherDisplayHide{
+	border: none;
+}
+
+.weatherInfo{
+	border: none;
+}
+
 .weatherInfo div {
-	color: black;
+	color: black !important;
 	font-weight: bold;
 	margin: 0px !important;
 /*	margin-top: 50px;*/
@@ -127,12 +156,12 @@ nav .nav-wrapper {
 
 div .collapsible-header {
 	margin-top: -1px !important;
-	margin-left: -35px !important;
-	padding: 7px;
+	margin-left: -10px !important;
+	padding: 8px;
 	font-size: 20px;
 	-webkit-text-fill-color: #FFF;
 	text-shadow: 0 0 22px black, 0 0 22px black;
-	background: #660000;
+	background: transparent;
 	border: none !important;
 }
 
@@ -188,11 +217,14 @@ div .collapsible-header {
 	padding: 10px;
 	margin: 10px;
 
+	border: 2px solid black;
+
 
 }
 
 .urlTitle {
 	margin-bottom: 10px;
+	/*font-weight: bold;*/
 }
 
 .newsBox {
@@ -210,16 +242,26 @@ div .collapsible-header {
 /*---------------to do box---------------*/
 
 #todoItemBox {
-	background-color: red;
-	border: 3px solid  #660000;
 	padding: 10px;
 	width: 30%;
 	background: white;
 	margin-left: 450px;
+	margin-bottom: 200px;
+	margin-top: 200px;
+
+	background-image: none;
+	 background-color: black !important;
+	 opacity: 0.8;
+	 color: white;
+}
+
+#todoItemBox label{
+	color: white;
 }
 
 #todoForm, #todoList {
 	text-align: center;
+
 }
 
 /*------------------travel plans portion-----------------*/
