--- a/assets/css/styleTwo.css
+++ b/assets/css/styleTwo.css
@@ -91,13 +91,23 @@ body {
 /*---------------countdown display----------*/
 
 .countdownDisplay{
-	margin-top: 50px;
+	padding: 20px;
+	width: 100%;
+	height: auto;
+	background-color: black;
+
 }
 
 #display{
-	background-color: none;
-	border-style: none;
 	font-size: 25px;
+	text-align: center;
+	-webkit-text-fill-color: #FFF;
+	text-shadow: 0 0 22px black, 0 0 22px black; 
+}
+
+.countdownText {
+	font-size: 40px;
+	margin-bottom: 5px;
 	text-align: center;
 	-webkit-text-fill-color: #FFF;
 	text-shadow: 0 0 22px black, 0 0 22px black; 
@@ -305,3 +315,17 @@ textarea.materialize-textarea {
 	padding-left: 10px !important;
 }
 
+/*-------------media queries-----------*/
+
+@media (max-width: 700px) {
+	.newsBox .article {
+		width: 45%;
+	}
+}
+
+@media (max-width: 400px) {
+
+	.newsBox .article {
+		width: 100%;
+	}
+}
