--- a/assets/css/lp.css
+++ b/assets/css/lp.css
@@ -5,16 +5,19 @@
  8.33% {
    opacity:1;
  }
- 10% {
-   opacity:1;
- }
  20% {
    opacity:0;
  }
  30% {
    opacity:0;
  }
+ 40% {
+   opacity:0;
+ }
  50% {
+   opacity:0;
+ }
+ 67% {
    opacity:0;
  }
  70% {
@@ -24,13 +27,10 @@
    opacity:0;
  }
  90% {
-   opacity:1;
- }
- 98.33% {
-   opacity:1;
+   opacity:0;
  }
  100% {
-   opacity:1;
+   opacity:0;
  }
 }
 
@@ -43,16 +43,19 @@
  8.33% {
    opacity:1;
  }
- 10% {
-   opacity:1;
- }
  20% {
    opacity:0;
  }
  30% {
    opacity:0;
  }
+ 40% {
+   opacity:0;
+ }
  50% {
+   opacity:0;
+ }
+ 67% {
    opacity:0;
  }
  70% {
@@ -62,33 +65,35 @@
    opacity:0;
  }
  90% {
-   opacity:1;
- }
- 98.33% {
-   opacity:1;
+   opacity:0;
  }
  100% {
-   opacity:1;
+   opacity:0;
  }
 }
 
+
+
 @-o-keyframes imgFadeInOut {
- 0% {
+  0% {
    opacity:1;
  }
  8.33% {
    opacity:1;
  }
- 10% {
-   opacity:1;
- }
  20% {
    opacity:0;
  }
  30% {
    opacity:0;
  }
+ 40% {
+   opacity:0;
+ }
  50% {
+   opacity:0;
+ }
+ 67% {
    opacity:0;
  }
  70% {
@@ -98,15 +103,14 @@
    opacity:0;
  }
  90% {
-   opacity:1;
- }
- 98.33% {
-   opacity:1;
+   opacity:0;
  }
  100% {
-   opacity:1;
+   opacity:0;
  }
 }
+
+
 
 @keyframes imgFadeInOut {
  0% {
@@ -115,16 +119,19 @@
  8.33% {
    opacity:1;
  }
- 10% {
-   opacity:1;
- }
  20% {
    opacity:0;
  }
  30% {
    opacity:0;
  }
+ 40% {
+   opacity:0;
+ }
  50% {
+   opacity:0;
+ }
+ 67% {
    opacity:0;
  }
  70% {
@@ -134,15 +141,13 @@
    opacity:0;
  }
  90% {
-   opacity:1;
- }
- 98.33% {
-   opacity:1;
+   opacity:0;
  }
  100% {
-   opacity:1;
+   opacity:0;
  }
 }
+
 
 
 #fadeImages {
@@ -153,7 +158,7 @@
 #fadeImages img {
   position:absolute;
   width:100%;
-  height: 100%;
+  height: 135%;
   left:0;
 }
 
@@ -161,79 +166,79 @@
   -webkit-animation-name: imgFadeInOut;
   -webkit-animation-timing-function: ease-in-out;
   -webkit-animation-iteration-count: infinite;
-  -webkit-animation-duration: 60s;
+  -webkit-animation-duration: 40s;
 
   -moz-animation-name: imgFadeInOut;
   -moz-animation-timing-function: ease-in-out;
   -moz-animation-iteration-count: infinite;
-  -moz-animation-duration: 60s;
+  -moz-animation-duration: 30s;
 
   -o-animation-name: imgFadeInOut;
   -o-animation-timing-function: ease-in-out;
   -o-animation-iteration-count: infinite;
-  -o-animation-duration: 60s;
+  -o-animation-duration: 30s;
 
   animation-name: imgFadeInOut;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
-  animation-duration: 60s;
+  animation-duration: 30s;
 }
 #fadeImages img:nth-of-type(1) {
-  -webkit-animation-delay: 54s;
-  -moz-animation-delay: 54s;
-  -o-animation-delay: 54s;
-  animation-delay: 54s;
+  -webkit-animation-delay: 27s;
+  -moz-animation-delay: 27s;
+  -o-animation-delay: 27s;
+  animation-delay: 27s;
 }
 #fadeImages img:nth-of-type(2) {
-  -webkit-animation-delay: 48s;
-  -moz-animation-delay: 48s;
-  -o-animation-delay: 48s;
-  animation-delay: 48s;
-}
-#fadeImages img:nth-of-type(3) {
-  -webkit-animation-delay: 42s;
-  -moz-animation-delay: 42s;
-  -o-animation-delay: 42s;
-  animation-delay: 42s;
-}
-#fadeImages img:nth-of-type(4) {
-  -webkit-animation-delay: 36s;
-  -moz-animation-delay: 36s;
-  -o-animation-delay: 36s;
-  animation-delay: 36s;
-}
-
-
-#fadeImages img:nth-of-type(5) {
-  -webkit-animation-delay: 30s;
-  -moz-animation-delay: 30s;
-  -o-animation-delay: 30s;
-  animation-delay: 30s;
-}
-#fadeImages img:nth-of-type(6) {
   -webkit-animation-delay: 24s;
   -moz-animation-delay: 24s;
   -o-animation-delay: 24s;
   animation-delay: 24s;
 }
-#fadeImages img:nth-of-type(7) {
+#fadeImages img:nth-of-type(3) {
+  -webkit-animation-delay: 21s;
+  -moz-animation-delay: 21s;
+  -o-animation-delay: 21s;
+  animation-delay: 21s;
+}
+#fadeImages img:nth-of-type(4) {
   -webkit-animation-delay: 18s;
   -moz-animation-delay: 18s;
   -o-animation-delay: 18s;
   animation-delay: 18s;
 }
+
+
+#fadeImages img:nth-of-type(5) {
+  -webkit-animation-delay: 15s;
+  -moz-animation-delay: 15s;
+  -o-animation-delay: 15s;
+  animation-delay: 15s;
+}
+#fadeImages img:nth-of-type(6) {
+  -webkit-animation-delay: 12s;
+  -moz-animation-delay: 12s;
+  -o-animation-delay: 12s;
+  animation-delay: 12s;
+}
+#fadeImages img:nth-of-type(7) {
+  -webkit-animation-delay: 9s;
+  -moz-animation-delay: 9s
+  -o-animation-delay: 9s;
+  animation-delay: 9s;
+}
 #fadeImages img:nth-of-type(8) {
-  -webkit-animation-delay: 12;
-  -moz-animation-delay: 12;
-  -o-animation-delay: 12;
-  animation-delay: 12;
+  -webkit-animation-delay: 6s;
+  -moz-animation-delay: 6s;
+  -o-animation-delay: 6s;
+  animation-delay: 6s;
 }
 
 #fadeImages img:nth-of-type(9) {
-  -webkit-animation-delay: 10s;
-  -moz-animation-delay: 10s;
-  -o-animation-delay: 10s;
-  animation-delay: 10s;
+  -webkit-animation-delay: 3s;
+  -moz-animation-delay: 3s;
+  -o-animation-delay: 3s;
+  animation-delay: 3s;
 }
 #fadeImages img:nth-of-type(10) {
   -webkit-animation-delay: 0;
@@ -260,6 +265,39 @@
 }
 
 p{
+
+  font-size: 15px;
+  text-align: center;
+  -webkit-text-fill-color: #9E8871;
+  text-shadow: 0 0 35px #660000 , 0 0 30px #660000;
+  margin-top: 5px;
+  margin-bottom: 5px;
+
+}
+
+#userMsgText{
+
+
+
+  text-align: center !important; 
+  -webkit-text-fill-color: #9E8871 !important;
+  text-shadow: 0 0 35px #660000 , 0 0 30px #660000 !important; 
+  margin-bottom: 15px !important;
+
+}
+
+
+#userMsgText2{
+
+  text-align: center !important; 
+  -webkit-text-fill-color: #9E8871 !important;
+  text-shadow: 0 0 35px #660000 , 0 0 30px #660000 !important; 
+  margin-bottom: 15px !important;
+
+
+}
+
+#valiseText{
 
   font-size: 50px;
   text-align: center;
@@ -323,13 +361,14 @@ h3 span{
 
 }
 
+
+
 #text{
 
   font-size: 58px;
    -webkit-text-fill-color: #9E8871;
     text-shadow: 0 0 35px #000 , 0 0 30px #000; 
 }
-
 
 
 
