--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,35 +1,129 @@
 body {
-	background-color: #FCFFF0;
+	/*background-color: #FCFFF0;*/
 	text-align: center;
+	font-family: 'Playfair Display', serif !important;
 }
 
-
-div {
-	border: 5px solid black;
-	padding: 5px;
-	margin: 5px;
-	background-color: #D0D2C4;
-	
 }
 
-.header {
-	height: 300px;
-	background-image: url(../images/wallstreet.jpg);
-	background-attachment: fixed;
-	font-size: 70px;
+/*---------------nav bar--------------*/
+
+#navBarTop{
+	position: fixed !important;
+	width: 100%;
+	height: 70px;
+	z-index: 200!important;
+}
+
+.navBar {
+	background-image: none;
+	background-color: black !important;
+	opacity: 0.8;
 	color: white;
+	font-weight: bold;
+	height: 70px;
+}
+
+
+/*---------------countdown display----------*/
+
+.countdownDisplay{
+	padding: 20px;
+	width: 100%;
+	height: auto;
+	background-color: black;
+
 }
 
 #display{
-
-	background-color: none;
-	border-style: none;
-
-	font-size: 30px;
+	font-size: 25px;
 	text-align: center;
 	-webkit-text-fill-color: #FFF;
 	text-shadow: 0 0 22px black, 0 0 22px black; 
 }
+
+.countdownText {
+	font-size: 40px;
+	margin-bottom: 5px;
+	text-align: center;
+	-webkit-text-fill-color: #FFF;
+	text-shadow: 0 0 22px black, 0 0 22px black; 
+	z-index: 99;
+}
+
+
+.headerTitle{
+
+  
+  font-weight: bold;
+  font-family: 'Playfair Display SC', serif !important;
+  opacity: 0.8;
+
+  	margin-top: 120px;
+	background-color: none;
+	border-style: none;
+	font-size: 50px;
+	text-align: center;
+	-webkit-text-fill-color: #FFF;
+	text-shadow: 0 0 22px black, 0 0 22px black; 
+
+
+}
+
+.logOut {
+	font-family: 'Playfair Display', serif !important;
+	background-color: #660000;
+	background-image: none !important;
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -webkit-appearance: button;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    box-sizing: border-box;
+	color: white !important;
+	margin-right: 92px;
+	margin-top: -35px;
+	text-transform: none;
+    
+	position: fixed;
+	right: 0;
+	font-weight: normal;
+}
+
+/*--------------- main/top display-------------------------*/
+
+.parallaxContainerTop, #mainContent, #miscContainer, #newsContainer {
+	border: 5px solid #black;
+	padding: 20px;
+}
+
+.parallax-container {
+	height: auto;
+}
+
+.parallax img {
+	background: black;
+	
+	
+}
+
+#parallaxImageOne {
+	max-height: 1400px;
+	max-width: 1600px;
+}
+
+
+
 
 .ui-menu .ui-menu-item a,.ui-menu .ui-menu-item a.ui-state-hover, .ui-menu .ui-menu-item a.ui-state-active {
 	font-weight: normal;
@@ -38,32 +132,76 @@ div {
 	font-size:14px;
 	}
 
-.container {
-	background-color: white;
-}
-
 
 .hide{
 	display: none;
 }
 
+/*-----------------------weather display-------------------*/
+
 #weather {
-	position: fixed;
+/*	position: absolute;
 	top: 5px;
-	right: 10px;
-	z-index: 100;
-	height: 190px !important;
-	width: 290px !important;
-	opacity: 0.8;
+	left: 10px;
+	z-index: 100;*/
+	/*height: 190px !important;
+	width: 290px !important;*/
+
+	/*----adding changes to the weather display - an ---------------*/
+	/*line-height: 130%;*/
+	z-index: 99;
+	position: fixed;
+	background: transparent;
+}
+
+.weatherIcon{
+	/*margin-top: -10px;*/
 
 }
+
+.miniWeatherDisplayHide{
+	border: none;
+}
+
+.weatherInfo{
+	border: none;
+}
+
+.weatherInfo div {
+	color: white !important;
+	font-family: 'Playfair Display', serif !important;
+	font-weight: bold;
+	margin: 0px !important;
+/*	margin-top: 50px;*/
+
+}
+
+div .collapsible-header {
+	margin-top: -74px !important;
+	margin-left: -10px !important;
+	padding: 8px;
+	font-size: 20px;
+	-webkit-text-fill-color: #FFF;
+	text-shadow: 0 0 22px black, 0 0 22px black;
+	background: transparent;
+	border: none !important;
+	font-family: 'Playfair Display', serif !important;
+}
+
+.collapsible-body{
+
+	background-image: url("../images/vector.jpg");
+	opacity: 0.7;
+	font-family: 'Playfair Display', serif !important;
+}
+
+/*-----------input form display----moved to the landing page-------------*/
 
 #travelCountry{
 	background-color: none;
 	border-style: none;
 
 }
-
 
 #travelSubmit {
     border: none;
@@ -92,21 +230,6 @@ div {
     background-color: #008CBA;
 }
 
-
-
-.newsBox {
-	height: 500px;
-	width: 100%;
-    overflow: scroll;
-
-}
-
-#mainContent {
-	padding: 50px;
-	height: 500px;
-
-}
-
 #addTravelInfo {
 	text-align: left;
 	width: 50%;	
@@ -114,14 +237,242 @@ div {
 	float: left;
 }
 
-#todoForm {
-	width: 45%;	
-	display: inline-block;
-	float:right;
+/*-------------news box---------------------------*/
+
+#newsContainer{
+	background: #faf7f3;
 }
 
-#todoList{
-	float: right;
-	width: 45%;
+.newsBox .article {
+	text-align: center;
+	width: 30%;
+	/*height: auto;*/
 	display: inline-block;
+	padding: 10px;
+	margin: 10px;
+	border: 2px solid black;
+	background: #faf7f3;
 }
+
+.urlTitle {
+	margin-bottom: 10px;
+	/*font-weight: bold;*/
+}
+
+.newsBox {
+	height: 500px;
+	width: 100%;
+	background: #faf7f3;
+}
+
+.newsBox h4 {
+	font-family: 'Playfair Display SC', serif;
+	font-size: 40px;
+	width: 100%;
+}
+
+
+/*---------------to do box---------------*/
+
+#todoItemBox {
+	padding: 10px;
+	width: 30%;
+	
+	margin-left: 416px;
+	margin-bottom: 200px;
+	margin-top: 113px;
+
+	background-image: none;
+	background: rgba(15,15,15,.925);
+    border-radius: 3px;
+    overflow-x: hidden;
+    overflow-y: auto
+    font-weight: bold;
+   font-family: 'Playfair Display', serif;
+	
+	 color: #fff;
+	 font-weight: bold;
+	 font-size: 33px;
+}
+
+#todoItemBox label{
+	color: white;
+	font-size: 20px;
+}
+
+#todoForm, #todoList {
+	text-align: left;
+	
+
+}
+
+/*------------------travel plans portion-----------------*/
+
+.travelImage img {
+	max-width: 1700px;
+	max-height: 1400px;
+	opacity: 0.8;
+}
+
+.travelPlans{
+	height: 500px;
+	overflow: all;
+}
+
+.travelPlans h4 {
+	font-family: 'Playfair Display SC', serif;
+	font-size: 40px;
+}
+
+.flightNotes label, .lodgingNotes label, .localTransportation label{
+	color: black;
+    text-shadow: #FFF 0px 0px 1px;
+    -webkit-font-smoothing: antialiased;
+	font-size: 25px;
+}
+
+/*.flightNotes label, .lodgingNotes label, .localTransportation label:active{
+	color: #660000;
+}*/
+
+.input-field label.active {
+	font-size: medium !important;
+	margin-top: -15px;
+}
+
+textarea.materialize-textarea {
+	background: white;
+	color: black !important;
+	padding-top: 5px !important;
+	padding-bottom: 5px !important;
+	padding-left: 10px !important;
+}
+
+
+.strikeThrough{
+	text-decoration: line-through !important;
+	opacity: 0.5 !important;
+}
+
+.round-button {
+    display:inline-block;
+    width:18px;
+    height:18px;
+    line-height:12px;
+    border: 2px solid #f5f5f5;
+    border-radius: 50%;
+    color: white;
+    text-align: -webkit-auto;
+    text-decoration:none;
+    background: black;
+    box-shadow: 0 0 3px gray;
+    font-size:12px;
+    font-weight:bold;
+	font-family:Garamond,'Apple Garamond','Lucida Sans Unicode';
+	opacity: 0.5;
+
+	padding-right: 11px;
+    padding-left: 5px;
+}
+.round-button:hover {
+    background: #660000;
+
+}
+
+.toDoText{
+	font-size: 20px;
+	font-family:Garamond,'Apple Garamond','Lucida Sans Unicode';
+	font-weight: bold;
+	color: white;
+}
+
+#toDoCount{
+	font-size: 20px;
+	 opacity: 0.6;
+	 color: #fff;
+	 font-weight: bold;
+}
+
+#addTodo{
+	font-family:Garamond,'Apple Garamond','Lucida Sans Unicode';
+	font-weight: bold;
+	color: white;
+}
+
+.travelPlansText{
+
+	font-size: 40px;
+	margin-bottom: 5px;
+	text-align: center;
+	-webkit-text-fill-color: #FFF;
+	text-shadow: 0 0 22px black, 0 0 22px black; 
+	z-index: 99;
+}
+
+#userCountry{
+	font-size: 20px;
+	margin-bottom: 5px;
+	text-align: center;
+	-webkit-text-fill-color: #FFF;
+	text-shadow: 0 0 22px black, 0 0 22px black; 
+	z-index: 99;
+}
+
+
+button{
+	
+	margin-top: -3px;
+	float: left;
+	float: right;
+}
+
+
+.travelPlansHeading{
+	margin-top: 10px;
+	margin-bottom: 27px;
+	font-size: 25px;
+	font-weight: bold;
+	color: #fff;
+}
+
+#flightBody{
+	color: black;
+	font-weight: bold;
+}
+
+#lodgingBody{
+	color: black;
+	font-weight: bold;
+}
+
+#itineraryBody{
+	color: black;
+	font-weight: bold;
+}
+
+.travelPlansCriteria{
+
+	color: black;
+	font-weight: bold;
+	opacity: 0.75;
+
+}
+
+
+/*-------------media queries-----------*/
+
+@media (max-width: 700px) {
+	.newsBox .article {
+		width: 45%;
+	}
+}
+
+@media (max-width: 400px) {
+
+	.newsBox .article {
+		width: 100%;
+	}
+}
+
+
+
